  - separate active climb and encounter-averaged bands
* infoboxes
  - added ":1" unit for gradient type displays
  - new infobox: % time non-circling climb
  - new infobox: % climb chart showing proportions of time spent circling climb (gray), cruise,
      climbing cruise (green), circling non-climb (orange)
  - improved auto-scaling of vario-like graphical infoboxes
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 CPUs
* Kobo
  - support Kobo Glo HD

Version 6.8.9 - not yet released
* fix two crash bugs

Version 6.8.8 - 2017/09/09
* data files
  - support "GSEC" in OpenAir files
* weather
  - update source URLs for METARs and TAFs
* devices
  - CAI302: fix waypoint download (#3830)
  - IMI: fix PGRMZ parsing (was interpreted as altitude, now is pressure altitude)
  - LX: fix Nano 3 task declaration (#3858)
* Kobo
  - support for Kobo Aura Edition 2
  - support for Kobo Glo Refurbished
  - fix Wi-Fi on recent Kobo firmware releases (#3850)
  - fix USB storage compatibility with Windows 10
* Raspberry Pi
  - fix Raspbian Stretch compatibility
* Raspberry Pi / Cubieboard
  - fix for freeze on shutdown (#3679)

Version 6.8.7 - 2016/08/12
* data files
  - fix freeze after loading malformed topography file
* tracking
  - SkyLines: fix SkyLines tracking on non-Android
  - SkyLines: fix two buffer overflow bugs
  - new client for the experimental "XCSoar Cloud"
* Android
  - remove the deprecated crash dumper

Version 6.8.6 - 2016/07/22
* calculations
  - show takeoff time after landing (#3786)
* user interface
  - fix graphics error on FLARM gauge
  - fix crash in waypoint label renderer (#3781)
  - fix several crashes in waypoint editor (#3553, #3784)
  - fix crash in task manager
  - use task speed unit for OLC speed InfoBox (#3785)
* devices
  - EW: use first 6 characters of turn point names (was: 3)